[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/Doors/Door_H/Door-H.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Doors/Door_H/Door_H.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 192, 0, 32, 32 ), Rect2( 224, 0, 32, 32 ), Rect2( 256, 0, 32, 32 ), Rect2( 288, 0, 32, 32 ), Rect2( 320, 0, 32, 32 ), Rect2( 352, 0, 32, 32 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 32, 0, 32, 32 ), Rect2( 64, 0, 32, 32 ), Rect2( 96, 0, 32, 32 ), Rect2( 128, 0, 32, 32 ), Rect2( 160, 0, 32, 32 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 15, 17 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 15, 4 )

[node name="Door-H" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="DoorAnim" type="Node2D" parent="." index="0"]

__meta__ = {
"_ase_imported": true
}

[node name="Sprite" type="Sprite" parent="DoorAnim" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 352, 0, 32, 32 )
__meta__ = {
"_ase_imported": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoorAnim" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Close = SubResource( 1 )
anims/Open = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]
__meta__ = {
"_ase_imported": true
}

[node name="TriggerZone" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="Blocker" type="StaticBody2D" parent="." index="2"]

position = Vector2( 63, -14 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocker" index="0"]

position = Vector2( -63, 21 )
shape = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_DoorH_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_DoorH_area_exited"]


